[package]
name = "rust-gameboy-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.1.3"
bitmatch = "0.1.1"
enum_dispatch = "0.3.8"
glob = "0.3.0"
num_enum = "0.5.7"
todo-or-die = { version = "0.1.2", features = ["github"] }
